<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDark"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="8dp"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
        android:id="@+id/lytLogo1"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginRight="8dp">

        <ImageView
            android:id="@+id/imgLogo1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/circle_mask"
            android:tint="@color/primaryDark" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lytMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background_chat_user"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/label_name"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@color/primaryDark" />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_message"
            android:textColor="@color/black" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lytLogo2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="8dp">

        <ImageView
            android:id="@+id/imgLogo2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/circle_mask"
            android:tint="@color/primaryDark" />
    </RelativeLayout>
</LinearLayout>