<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDark"
    android:orientation="vertical"
    tools:context="activities.DirectActivity"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:id="@+id/lytRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryNormal"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="RtlHardcoded">

        <RelativeLayout
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/logo" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/circle_mask"
                android:tint="@color/primaryNormal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_partner_name"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/adapter_message" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/app_name"
        android:src="@color/pink" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/primaryNormal"
            android:gravity="center_vertical"
            android:hint="@string/message_enter"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/primaryLight"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imgSend"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="8dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/send" />
    </LinearLayout>
</LinearLayout>